removed br tags

--- a/index.pug
+++ b/index.pug
@@ -47,11 +47,20 @@ html(lang="en")
                         tr
                           td(colspan="2" class="content hero-content layout")
                             h1(mc:edit="hero-header") Září patří Velvet Innovation 
-                            br
+                        tr(style="height:15px")
+                          td
+                        tr
+                          td
                             p(class="body-text", mc:edit="hero-perex") Jedno místo, stovky inspirativních osobností a spousta skvělých přednášek
-                            br
+                        tr(style="height:15px")
+                          td
+                        tr
+                          td
                             h4(class="body-header", mc:edit="hero-subheader", mc:hideable) Top výběr z newsletteru
-                            br
+                        tr(style="height:15px")
+                          td
+                        tr
+                          td
                             ul(mc:edit="hero-bullets")
                               li Hanka Šudáková si do JICtalku pozvala Jirku Kobelku z Tatum
                         tr(style="height:40px")
@@ -88,18 +97,25 @@ html(lang="en")
                                               td
                                                 span(class="caption", mc:edit="magazine-big-item-tag") jic talk
                                               td(width="10" style="width:10px")
-                                          br
-                                          h1(mc:edit="magazine-big-item-header") Nadpis lorem ipsum
-                                          br
-                                          p(mc:edit="magazine-big-item-perex") Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.
+                                          table
+                                            tr(style="height:15px")
+                                              td
+                                            tr
+                                              td
+                                                h1(mc:edit="magazine-big-item-header") Nadpis lorem ipsum
+                                            tr(style="height:15px")
+                                              td
+                                            tr
+                                              td
+                                                p(mc:edit="magazine-big-item-perex") Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.
                               tr(style="height:40px")
                                 td(colspan="2")
                               tr(mc:repeatable)
                                 //
                                 // Magazine small item
                                 //
-                                td(class="grid-item-small" )
-                                  table( cellspacing="0" cellspadding="0" border="0")
+                                td(class="grid-item-small")
+                                  table(cellspacing="0" cellspadding="0" border="0")
                                     tr
                                       td
                                         div(class="content")
@@ -109,14 +125,21 @@ html(lang="en")
                                               td
                                                 span(class="caption", mc:edit="magazine-items-col-1-tag") jic talk
                                               td(width="10" style="width:10px")
-                                          br
-                                          h4(mc:edit="magazine-items-col-1-header") Nadpis lorem ipsum
-                                          br
-                                          p(mc:edit="magazine-items-col-1-perex") Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.
-                                      td(width="15" style="width:15px")
-                                    tr
-                                      td(colspan="2")
-                                        img(src=`${apiUrl}/images/spaces/xxl.png`, class="space xxl" width="40" height="40")
+                                          table
+                                            tr(style="height:15px")
+                                              td
+                                            tr
+                                              td
+                                                h4(mc:edit="magazine-items-col-1-header") Nadpis lorem ipsum
+                                            tr(style="height:15px")
+                                              td
+                                            tr
+                                              td
+                                                p(mc:edit="magazine-items-col-1-perex") Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.
+                                            tr(style="height:15px")
+                                              td
+                                            tr(style="height:40px")
+                                              td(colspan="2")
                                 //
                                 // Magazine small item
                                 //
@@ -131,13 +154,21 @@ html(lang="en")
                                               td
                                                 span(class="caption", mc:edit="magazine-items-col-2-tag") jic talk
                                               td(width="10" style="width:10px")
-                                          br
-                                          h4(mc:edit="magazine-items-col-2-header") Nadpis lorem ipsum
-                                          br
-                                          p(mc:edit="magazine-items-col-2-perex") Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.
-                                      td(width="15" style="width:15px")
-                                    tr(style="height:40px")
-                                      td(colspan="2")
+                                          table
+                                            tr(style="height:15px")
+                                              td
+                                            tr
+                                              td
+                                                h4(mc:edit="magazine-items-col-2-header") Nadpis lorem ipsum
+                                            tr(style="height:15px")
+                                              td
+                                            tr
+                                              td
+                                                p(mc:edit="magazine-items-col-2-perex") Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.
+                                            tr(style="height:15px")
+                                              td
+                                            tr(style="height:40px")
+                                              td(colspan="2")
                               tr
                                 td(colspan="2")
                                   span(class="btn", mc:edit="btn-all-articles") 
@@ -174,14 +205,24 @@ html(lang="en")
                                               td
                                                 span(class="caption", mc:edit="events-big-tag") jic talk
                                               td(width="10" style="width:10px")
-                                          br
-                                          h1(mc:edit="events-big-header") Nadpis lorem ipsum
-                                          br
-                                          p(mc:edit="events-big-perex") Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.
-                                          br
-                                          div(class="info-tags", mc:edit="events-big-info")
-                                            div.caption 19. 2. 2022, 19 – 21 hod.
-                                            div.caption brno-medlánky
+                                          table
+                                            tr(style="height:15px")
+                                              td
+                                            tr
+                                              td
+                                                h1(mc:edit="events-big-header") Nadpis lorem ipsum
+                                            tr(style="height:15px")
+                                              td
+                                            tr
+                                              td
+                                                p(mc:edit="events-big-perex") Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.
+                                            tr(style="height:15px")
+                                              td
+                                            tr
+                                              td
+                                                div(class="info-tags", mc:edit="events-big-info")
+                                                  div.caption 19. 2. 2022, 19 – 21 hod.
+                                                  div.caption brno-medlánky
                               tr(style="height:40px")
                                 td(colspan="2")
                               tr(mc:repeatable)
@@ -199,17 +240,27 @@ html(lang="en")
                                               td
                                                 span(class="caption", mc:edit="events-items-col-1-tag") jic talk
                                               td(width="10" style="width:10px")
-                                          br
-                                          h4(mc:edit="events-items-col-1-header") Nadpis lorem ipsum
-                                          br
-                                          p(mc:edit="events-items-col-1-perex") Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.
-                                          br
-                                          div(class="info-tags", mc:edit="events-items-col-1-info")
-                                            div.caption 19. 2. 2022, 19 – 21 hod.
-                                            div.caption brno-medlánky
-                                      td(width="15" style="width:15px")
-                                    tr(style="height:40px")
-                                      td(colspan="2")
+                                          table
+                                            tr(style="height:15px")
+                                              td
+                                            tr
+                                              td
+                                                h4(mc:edit="events-items-col-1-header") Nadpis lorem ipsum
+                                            tr(style="height:15px")
+                                              td
+                                            tr
+                                              td
+                                                p(mc:edit="events-items-col-1-perex") Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.
+                                            tr(style="height:15px")
+                                              td
+                                            tr
+                                              td
+                                                div(class="info-tags", mc:edit="events-items-col-1-info")
+                                                  div.caption 19. 2. 2022, 19 – 21 hod.
+                                                  div.caption brno-medlánky
+                                              td(width="15" style="width:15px")
+                                            tr(style="height:40px")
+                                              td(colspan="2")
                                 // 
                                 // Events small item
                                 //
@@ -224,17 +275,27 @@ html(lang="en")
                                               td
                                                 span(class="caption", mc:edit="events-items-col-2-tag") jic talk
                                               td(width="10" style="width:10px")
-                                          br
-                                          h4(mc:edit="events-items-col-2-header") Nadpis lorem ipsum
-                                          br
-                                          p(mc:edit="events-items-col-2-perex") Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.
-                                          br
-                                          div(class="info-tags", mc:edit="events-items-col-2-info")
-                                            div.caption 19. 2. 2022, 19 – 21 hod.
-                                            div.caption brno-medlánky
-                                      td(width="15" style="width:15px")
-                                    tr(style="height:40px")
-                                      td(colspan="2")
+                                          table
+                                            tr(style="height:15px")
+                                              td
+                                            tr
+                                              td
+                                                h4(mc:edit="events-items-col-2-header") Nadpis lorem ipsum
+                                            tr(style="height:15px")
+                                              td
+                                            tr
+                                              td
+                                                p(mc:edit="events-items-col-2-perex") Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.
+                                            tr(style="height:15px")
+                                              td
+                                            tr
+                                              td
+                                                div(class="info-tags", mc:edit="events-items-col-2-info")
+                                                  div.caption 19. 2. 2022, 19 – 21 hod.
+                                                  div.caption brno-medlánky
+                                              td(width="15" style="width:15px")
+                                            tr(style="height:40px")
+                                              td(colspan="2")
                               tr
                                 td(colspan="2")
                                   span(class="btn", mc:edit="btn-all-events") 
@@ -256,10 +317,15 @@ html(lang="en")
                                   table
                                     tr
                                       td
-                                        span(class="startup-item" href="https://jic.cz")
-                                          h4(mc:edit="startup-item-1-header") Nadpis lorem ipsum
-                                          br
-                                          p(mc:edit="startup-item-1-perex") Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.
+                                        table(class="startup-item")
+                                          tr
+                                            td
+                                              h4(mc:edit="startup-item-1-header") Nadpis lorem ipsum
+                                          tr(style="height:5px")
+                                            td
+                                          tr
+                                            td
+                                              p(mc:edit="startup-item-1-perex") Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.
                                     tr(style="height:30px")
                                       td
                                     tr
@@ -293,8 +359,13 @@ html(lang="en")
                                     tr
                                       td.content
                                         p(mc:edit="human-perex") Lorem ipsum (zkráceně lipsum) je označení pro standardní pseudolatinský text užívaný v grafickém designu a navrhování jako demonstrativní výplňový text při vytváření pracovních ukázek grafických návrhů (např. internetových stránek, rozvržení časopisů či všech druhů reklamních materiálů). Lipsum tak pracovně znázorňuje text v ukázkových maketách (tzv. mock-up) předtím, než bude do hotového návrhu vložen smysluplný obsah. 
-                                        br
+                                    tr(style="height:15px")
+                                      td
+                                    tr
+                                      td
                                         h3(mc:edit="human-name") Petr Chládek
+                                    tr
+                                      td
                                         span(mc:edit="human-position") Ředitel JIC
                       //
                       // Pelmel
@@ -302,7 +373,7 @@ html(lang="en")
                       table(class="section" cellspacing="0" cellspadding="0" border="0")
                         tr
                           td
-                            img(src=`${apiUrl}/images/header-pelmel.png`, class="section-header" width="600" height="295")
+                            img(src=`${apiUrl}/images/pelmel-header-1.png`, class="section-header" width="600" height="290")
                         tr(style="height:40px")
                           td
                         tr
