--- a/index.pug
+++ b/index.pug
@@ -390,13 +390,13 @@ html(lang="en")
                             table(class="grid" cellspacing="0" cellspadding="0" border="0")
                               tr(mc:repeatable)
                                 td(class="pelmel")
-                                  div(mc:edit="pelmel-item-1")
+                                  div
                                     table
                                       tr(style="height:5px")
                                         td
                                       tr
                                         td
-                                          h4 Kiwi se vrací do hry
+                                          h4(mc:edit="pelmel-item-1") Kiwi se vrací do hry
                                       tr(style="height:5px")
                                         td
                         tr(style="height:40px")
